# muscriptor

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  swarm.yml
.github/workflows/: deploy.yml  id_ed25519.pub  pypi.yml
assets/: README.md  gitattributes
muscriptor/: __init__.py  __main__.py  accelerator.py  events.py  main.py  server.py  transcription_model.py
muscriptor-large/: README.md  config.json
muscriptor-rs/: Cargo.toml
muscriptor-rs/src/: lib.rs  main.rs  model.rs  realtime.rs
muscriptor/models/: lm.py
muscriptor/modules/: conditioners.py  transformer.py
muscriptor/tokenizer/: mt3.py
muscriptor/utils/: audio.py  device.py  midi.py
tests/: test_cli.py  test_midi.py  test_prelude_forcing.py  test_server.py  test_strict_instruments.py  test_transcription_model.py
web/: index.html  vite.config.ts
web/src/: App.tsx  analytics.ts  audio.ts  main.tsx  pianoroll.ts  sse.ts  style.css  vite-env.d.ts  wav.ts
web/src/components/: Button.tsx  ConditioningPanel.tsx  ConsentBanner.tsx  Controls.tsx  DropOverlay.tsx  InstrumentList.tsx  OutputBar.tsx  PianoRollCanvas.tsx  WelcomeScreen.tsx
web/src/hooks/: useTranscription.ts
