[package]
name = "muscriptor-rs"
version = "0.1.0"
edition = "2021"
description = "Audio-to-MIDI transcription using a transformer language model (Rust port)"

[dependencies]
candle-core = { version = "0.10", features = ["metal"] }
candle-nn = { version = "0.10", features = ["metal"] }
hound = "3.5"
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
fastrand = "2"
dirs = "6"

# Realtime mic capture
cpal = "0.15"
crossbeam-channel = "0.5"

[features]
default = []
realtime = []
